# empiricalcpp

./: .gitignore  CMakeLists.txt  EmpiricalCppConfig.h  LICENSE  Makefile  README.md  premake4.lua
cmake/: macros.cmake
core/: projects.lua
core/include/Empirical/: Basis.hpp  Boundary.hpp  BoundaryCondition.hpp  Constants.hpp  Domain.hpp  Matrices.hpp  Mesh.hpp  Problem.hpp  Quadrature  Quadrature.hpp  Version.hpp
core/include/Empirical/basis/: Basis2D.hpp  MFSBasis2D.hpp
core/include/Empirical/boundary/: ArcSegment2D.hpp  ComplexFunctionSegment2D.hpp  RadialSegment2D.hpp
core/include/Empirical/boundaryconditions/: Dirichlet2D.hpp
core/include/Empirical/domain/: ArcSegment2D.hpp  BoundaryCondition2D.hpp  ComplexFunctionSegment2D.hpp  Domain2D.hpp  ExteriorDomain2D.hpp  InteriorDomain2D.hpp  RadialSegment2D.hpp
core/include/Empirical/mesh/: Quadrature.hpp
core/include/Empirical/problem/: ArcSegment2D.hpp  BoundaryConditions2D.hpp  BoundaryValueProblem2D.hpp  ComplexFunctionSegment2D.hpp  RadialSegment2D.hpp  ScatteringProblem2D.hpp
core/include/Empirical/quadrature/: LegendreGaussLobatto.hpp  PeriodicTrapezoid.hpp  Quadrature.hpp  Trapezoid.hpp
core/include/Empirical/src/basis/: Basis2D.hpp
core/include/Empirical/src/domain/: Domain2D.hpp  RadialSegment2D.hpp
core/src/: Basis2D.cpp  Boundary2D.cpp  BoundaryConditions2D.cpp  BoundarySegments2D.cpp  Constants.cpp  Domain.cpp  DomainSegments2D.cpp  Mesh.cpp  Problem2D.cpp  Problem2D.hpp  Quadrature.cpp
core/src/basis/: Basis2D.cpp  MFSBasis2D.cpp  MFSBasis2D.hpp
core/src/boundary/: ArcSegment2D.cpp  ArcSegment2D.hpp  BaseFunctionalBoundary2D.cpp  BaseFunctionalBoundary2D.hpp  Boundary2D.cpp  ComplexFunctionSegment2D.cpp  ComplexFunctionSegment2D.hpp  RadialSegment2D.cpp  RadialSegment2D.hpp
core/src/boundaryconditions/: BoundaryConditions2D.cpp  Cauchy2D.hpp  Dirichlet2D.hpp  Neumann2D.hpp
core/src/domain/: BaseDomain2D.cpp  BaseDomain2D.hpp  ExteriorDomain2D.cpp  InteriorDomain2D.cpp
core/src/mesh/: QuadratureMesh.cpp  QuadratureMesh.hpp
core/src/problem/: BaseBoundaryValueProblem2D.cpp  BaseBoundaryValueProblem2D.hpp
core/src/quadrature/: LegendreGaussLobatto.hpp  PeriodicTrapezoid.hpp  Quadrature.cpp  Trapezoid.hpp
core/tests/: Boundary2DTests.cpp  QuadratureTests.cpp  VersionTests.cpp  domain_tests.cpp  mfsbasis_tests.cpp  quadrature_tests.cpp  quadrature_tests.hpp  runtests.cpp  segment_tests.cpp
core/tests/basis/: MFSBasis2DTests.cpp
core/tests/boundary/: Boundary.cpp  Boundary.hpp  ComplexFunctionalSegment.cpp  RadialSegment2DTests.cpp
core/tests/boundaryconditions/: Cauchy2DTests.cpp  Dirichlet2DTests.cpp  Neumann2DTests.cpp
core/tests/domain/: ExteriorDomain2DTests.cpp  InteriorDomain2DTests.cpp
empirical/: Basis.cpp  CMakeLists.txt  quadrature.c  system_defs.h
empirical/include/: CMakeLists.txt
empirical/include/empiricalcpp/: Basis.hpp  Boundary.hpp  BoundaryCondition.hpp  CMakeLists.txt  Constants.hpp  Domain.hpp  Empirical.hpp  Interpolation.hpp  empirical.hpp
empirical/include/empiricalcpp/src/: CMakeLists.txt  Constants.hpp  Interpolation.hpp  Quadrature.hpp  Version.hpp  constants.hpp  interpolation.hpp  mesh.hpp  quadrature.hpp  version.hpp
empirical/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
empirical/src/: .gitattributes  CMakeLists.txt  Constants.cpp  Quadrature.cpp  Version.cpp  constants.cpp  interpolation1D.cpp  mesh.cpp  quadrature.cpp  version.cpp
empirical/src/interpolation/: EmpiricalInterpolationScalar1D.cpp
empirical/src/mesh/: FunctionMesh1D.cpp  FunctionMesh2D.cpp  Mesh1D.cpp  Mesh2D.cpp  QuadratureMesh1D.cpp  QuadratureMesh2D.cpp  RangeMesh1D.cpp  RangeMesh2D.cpp
include/: basis.h  boundary.h  config.h.in  points.h  quadrature.h
include/Empirical/: Basis  Domain  Problem
include/Empirical/src/: config.h.in
include/Empirical/src/basis/: Basis.hpp  Basis2D.hpp  MFSBasis.hpp  MFSBasis2D.hpp
include/Empirical/src/domain/: ArcSegment2D.hpp  BasicDomainSegment2D.hpp  BoundaryCondition2D.hpp  ComplexFunctionSegment2D.hpp  Domain2D.hpp  DomainSegment2D.hpp  RadialSegment.hpp  RadialSegment2D.hpp  boundary.hpp  domain.hpp  segments.hpp
include/Empirical/src/problem/: BVP.hpp  BoundaryValueProblem2D.hpp  Problem.hpp  Scattering.hpp  ScatteringProblem2D.hpp
include/Empirical/src/quadrature/: Quadrature.hpp
include/empiricalcpp/: Matrices.hpp  Mesh.hpp  Problem.hpp  Quadrature.hpp
include/empiricalcpp/src/: Mesh.hpp
src/: Basis.h  CMakeLists.txt  EmpiricalCppConfig.h.in  Makefile  Version.cpp  config.h.in  empirical_info.h  empirical_info.h.in  main.cpp  quadrature.cpp  quadrature.h
src/libmath/: Basis2D.cpp  Boundary2D.cpp  Domain.cpp  DomainSegments2D.cpp  Problem2D.cpp  Problem2D.hpp
src/math/: CMakeLists.txt  MFSBasis.cpp  Problem.cpp  Quadrature.cpp  Segments.cpp  basis.cpp  config.cpp  quadrature.cpp
test/: CMakeLists.txt  Makefile  mfsbasis_tests.cpp  quadrature_tests.cpp  runtests.cpp  segment_tests.cpp
unittests/: CMakeLists.txt
unittests/InterpolatorTests/: CMakeLists.txt  InterpolatorTests1D.cpp
unittests/MeshTests/: CMakeLists.txt  Mesh1DTests.cpp  Mesh2DTests.cpp
unittests/QuadratureTests/: CMakeLists.txt  QuadratureTests.cpp
